[project]
name = "streamlit-timeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notion-client>=2.4.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "streamlit>=1.47.1",
    "tqdm>=4.67.1",
    "streamlit-elements>=0.1.0",
    "streamlit-mermaid>=0.3.0",
]
